Control tweaks - customselect needs position to prevent overlapping elements - added tooltip option to MVRange - added .mv-tooltip css class

--- a/src/controls/MVCustomSelect.css
+++ b/src/controls/MVCustomSelect.css
@@ -66,6 +66,7 @@
   display: grid;
   align-items: center;
   grid-template-columns: 30px auto;
+  position: relative;
 }
 
 .mv-cselect-opt:hover {
